--- a/main.html
+++ b/main.html
@@ -8,11 +8,12 @@
     <title>Try this extension</title>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=PT+Serif:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=PT+Serif:ital@1&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -21,10 +22,7 @@
             <div class="logo">Intelli </div>
             <div id="eye">Eye</div>
         </div>
-        <!-- <label class="switch">
-    <input type="checkbox">
-    <span class="slider"></span>
-  </label> -->
+
         <div id="countdown">
             <div id="countdown-number"></div>
             <svg>
@@ -111,9 +109,13 @@
         <iframe src="https://open.spotify.com/embed/playlist/75NnLOSbadDI3dfKHLKplO" width="100%" height="380"
             frameBorder="0" allowfullscreen=""
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWZeKCadgRdKQ" width="100%" height="380"
+            frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
     <script src="main.js">
-
+    
+<!-- <script src="nilesh.js"></script> -->
 
     </script>
 </body>
