adding eye protection switch

--- a/main.html
+++ b/main.html
@@ -67,6 +67,16 @@
         </div>
         <hr>
         <div class="options">
+            <h1 class="optmin">Eye Protection</h1>
+            <div class="optdiv">
+
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider"></span>
+                </label>
+            </div>
+            <hr>
+        <div class="options">
             <h1 class="optmin">Pomodoro</h1>
             <div class="optdiv">
 
