name change to Ignite

--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 <body>
     <div id="body">
         <div id="nav">
-            <div class="logo">Intelli </div>
-            <div id="eye">Eye</div>
+            <div class="logo">Ignite</div>
+            <div id="eye"></div>
         </div>
 
         <div id="countdown">
