adding another timer extension for help

--- a/getting started/popup.html
+++ b/getting started/popup.html
@@ -3,8 +3,17 @@
   <head>
     <link rel="stylesheet" href="button.css">
   </head>
+  <style>
+    body{
+      min-height: 180px;
+  padding: 0;
+  width: 384px;
+    }
+  </style>
   <body>
     <button id="changeColor"></button>
     <script src="popup.js"></script>
+    <h1 id="eyeprot_output">timer</h1>
+    <button id="click">click</button>
   </body>
 </html>
