skeleton of eye protection mode without message passing

--- a/test bench for ignite/index.html
+++ b/test bench for ignite/index.html
@@ -10,11 +10,13 @@
 
 <body>
   <input type="checkbox" id="checke">
-  <button id="iframebtn">click me</button>
+  <input type="number" id="input">
+  <button id="btn">click me</button>
 
 
-  <script src="focusprompt.js"></script>
-  <script src="background.js"></script>
+  <!-- <script src="focusprompt.js"></script>
+  <script src="background.js"></script> -->
+  <script src="popup.js"></script>
   <!-- <script>const iframebtn = document.getElementById("iframebtn");
     iframebtn.addEventListener("click", (event) => {
       iframesettings();
