skeleton of eye protection mode without message passing

--- a/test bench for ignite/index.html
+++ b/test bench for ignite/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <input type="checkbox" id="checke">
+  <!-- <input type="checkbox" id="checke"> -->
+  <button id="checke">cancel</button>
   <input type="number" id="input">
   <button id="btn">click me</button>
 
