clearing the clutter

--- a/test bench for ignite/index.html
+++ b/test bench for ignite/index.html
@@ -10,14 +10,15 @@
 
 <body>
   <!-- <input type="checkbox" id="checke"> -->
-  <button id="checke">cancel</button>
   <input type="number" id="input">
-  <button id="btn">click me</button>
-
-
-  <!-- <script src="focusprompt.js"></script>
+  <button id="motivation_off">cancel</button>
+  <button id="motivation_on">click me</button>
+  <button id="focus_mode">focusmode</button>
+  <!-- 
+    <script src="focusprompt.js"></script>
   <script src="background.js"></script> -->
   <script src="popup.js"></script>
+  <!-- <script type="text/javascript" src="quotes.json"></script> -->
   <!-- <script>const iframebtn = document.getElementById("iframebtn");
     iframebtn.addEventListener("click", (event) => {
       iframesettings();
